<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rednegocioslogistica.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.rednegocioslogistica.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_nosotros"
        android:name="com.example.rednegocioslogistica.ui.nosotros.NosotrosFragment"
        android:label="@string/menu_nosotros"
        tools:layout="@layout/fragment_nosotros" />
    <fragment
        android:id="@+id/nav_preguntas"
        android:name="com.example.rednegocioslogistica.ui.preguntas.PreguntasFragment"
        android:label="@string/menu_preguntas"
        tools:layout="@layout/fragment_preguntas" />
    <fragment
        android:id="@+id/nav_lugares"
        android:name="com.example.rednegocioslogistica.ui.lugares.LugaresFragment"
        android:label="@string/menu_lugares"
        tools:layout="@layout/fragment_lugares" />
    <fragment
        android:id="@+id/nav_reglamento"
        android:name="com.example.rednegocioslogistica.ui.reglamento.ReglamentoFragment"
        android:label="@string/menu_reglamento"
        tools:layout="@layout/fragment_reglamento" />
    <fragment
        android:id="@+id/nav_courier"
        android:name="com.example.rednegocioslogistica.ui.courier.CourierFragment"
        android:label="@string/menu_courier"
        tools:layout="@layout/fragment_courier" />

    <fragment
        android:id="@+id/nav_mensajeria"
        android:name="com.example.rednegocioslogistica.ui.mensajeria.MensajeriaFragment"
        android:label="@string/menu_mensajeria"
        tools:layout="@layout/fragment_mensajeria" />

    <fragment
        android:id="@+id/nav_almacen"
        android:name="com.example.rednegocioslogistica.ui.almacen.AlmacenFragment"
        android:label="@string/menu_almacen"
        tools:layout="@layout/fragment_almacen" />

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.example.rednegocioslogistica.ui.tips.TipsFragment"
        android:label="@string/menu_tips"
        tools:layout="@layout/fragment_tips" />
</navigation>